force-app/main/default/objects/ssot__AdverseEvent__dlm/fields/ssot__DetectedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__DetectedDateTime__c</fullName>
    <label>Detected  DateTime</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DetectedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>