force-app/main/default/objects/ssot__AdverseEvent__dlm/fields/ssot__EventCodeObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__EventCodeObject__c</fullName>
    <label>Event Code Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EventCodeObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>