force-app/main/default/objects/ssot__AdverseEvent__dlm/fields/ssot__EventEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__EventEndDateTime__c</fullName>
    <label>Event End  DateTime</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EventEndDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>