force-app/main/default/objects/ssot__AdverseEvent__dlm/fields/ssot__IsExpected__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsExpected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Expected</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsExpected</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>