force-app/main/default/objects/ssot__AdverseEvent__dlm/fields/ssot__RecordedById__c.field-meta.xml
<CustomField>
    <fullName>ssot__RecordedById__c</fullName>
    <label>Recorded By</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RecordedById</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>