force-app/main/default/objects/ssot__AdverseEvent__dlm/fields/ssot__rel_1716726417932_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726417932_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AdverseEvent_SubjectId_map_Account_I_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>AdverseEvent_SubjectId_map_Account_I_rel</relationshipLabel>
    <relationshipName>rel_1716726417932_end</relationshipName>
    <type>Lookup</type>
</CustomField>