force-app/main/default/objects/ssot__AdverseEvent__dlm/fields/ssot__rel_1716726422807_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726422807_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AdverseEvent_EventCodeId_map_CodeSet_rel</label>
    <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
    <relationshipLabel>AdverseEvent_EventCodeId_map_CodeSet_rel</relationshipLabel>
    <relationshipName>rel_1716726422807_end</relationshipName>
    <type>Lookup</type>
</CustomField>