force-app/main/default/objects/ssot__AdverseEvent__dlm/fields/ssot__rel_1716726429170_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726429170_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AdverseEvent_RelatedAdverseEventId_m_rel</label>
    <referenceTo>ssot__AdverseEvent__dlm</referenceTo>
    <relationshipLabel>AdverseEvent_RelatedAdverseEventId_m_rel</relationshipLabel>
    <relationshipName>rel_1716726429170_end</relationshipName>
    <type>Lookup</type>
</CustomField>