force-app/main/default/objects/ssot__AdverseEvent__dlm/fields/ssot__SiteId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SiteId__c</fullName>
    <label>Site</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SiteId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>