force-app/main/default/objects/ssot__AdverseEvent__dlm/fields/ssot__SiteObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__SiteObject__c</fullName>
    <label>Site Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SiteObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>