force-app/main/default/objects/ssot__AdverseEvent__dlm/fields/ssot__SubjectObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__SubjectObject__c</fullName>
    <label>Subject Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SubjectObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>